# FastAPI

./: .env  Dockerfile  docker-compose.yml  livros.sql  main.py  package.json  pyproject.toml  readme.md  tarefas.db
